--- a/2025-02-09/social-network-server/package.json
+++ b/2025-02-09/social-network-server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "config": "^3.3.12",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
@@ -18,8 +19,10 @@
     "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/config": "^3.3.5",
     "@types/express": "^5.0.0",
+    "@types/node": "^22.13.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   }
