--- a/2025-03-16-tests/01-sockets/docker-compose.yaml
+++ b/2025-03-16-tests/01-sockets/docker-compose.yaml
@@ -31,3 +31,14 @@ services:
     ports:
       - 5173:80
     build: ./frontend
+  io:
+    container_name: sn-compose-io
+    ports:
+      - 3003:3003
+    build: ./io
+  localstack:
+    container_name: sn-compose-localstack
+    ports:
+      - 127.0.0.1:4566:4566
+      - 127.0.0.1:4510-4559:4510-4559
+    image: localstack/localstack
