--- a/2025-03-18-aws/01-aws/frontend/Dockerfile
+++ b/2025-03-18-aws/01-aws/frontend/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR /app
 COPY ./package*.json ./
 RUN npm install
 COPY ./ ./
-RUN npm run build -- --mode docker
+RUN npm run build
 
 FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
