--- a/2025-03-23-aws2/01-aws/image-resizer/package.json
+++ b/2025-03-23-aws2/01-aws/image-resizer/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
     "@aws-sdk/client-sqs": "^3.772.0",
-    "config": "^3.3.12"
+    "@aws-sdk/lib-storage": "^3.772.0",
+    "config": "^3.3.12",
+    "sharp": "^0.33.5"
   }
 }
