--- a/2025-04-22-transearly2/backend/package.json
+++ b/2025-04-22-transearly2/backend/package.json
@@ -35,6 +35,7 @@
     "sequelize-typescript": "^2.1.6",
     "socket-enums-shaihey": "^1.0.0",
     "socket.io-client": "^4.8.1",
+    "stripe": "^18.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
